# yolov5s-involution

./: CMakeLists.txt  Involution2dPlugin.cpp  Involution2dPlugin.h  LICENSE  README.md  backup.txt  calibrator.cpp  common.hpp  gen_wts.py  involution.py  unfold.cpp  unfold.h  utils.h  yololayer.cu  yololayer.h  yolov5.cpp
include/: cuda_utils.h  involution2d.cu  involution2d.h  serialize.hpp  torch_unfold.cu  torch_unfold.h
src/: involution2d_cuda.cu
